[package]
name = "uckb-key"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "[Unofficial] Lightweight CKB key utilities."
homepage = "https://github.com/unofficial-ckb/uckb-key"
repository = "https://github.com/unofficial-ckb/uckb-key"
keywords = []
categories = []
license = "Apache-2.0 OR MIT"

[dependencies]
property = "0.3.3"
thiserror = "1.0.22"
lazy_static = "1.4.0"
faster-hex = "0.4.1"
rand = "0.6.5"
bech32 = "0.7.2"
secp256k1_kernel = { package = "secp256k1", version = "0.19.0", features = ["rand", "recovery"] }
blake2b-rs = "0.2.0"

[dev-dependencies]
slices = "0.1.1"

[features]
default = []
insecure = []

[badges]
travis-ci = { repository = "unofficial-ckb/uckb-key" }
